--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>Hola Mundo!</title>
+ <title>Hola Españoles!</title>
  link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
