Añado un tercer parrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
  <p>Este es el primer fichero de mi Git Repo.</p>
  <p>Nueva línea para trabajar con branches!</p>
   <p>Segunda Nueva línea para trabajar con branches!</p>
+  <p>Tercera Nueva línea para trabajar con branches!</p>
+
  <div><img src="git-icon.jpeg" style="width:100%;max-width:960px"></div>
 </body>
