--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
- <h1>Hola España</h1>
+ <h1>Hola Tierra</h1>
  <p>Este es el primer fichero de mi Git Repo.</p>
  <p>Nueva línea para trabajar con branches!</p>
  <div><img src="git-icon.jpeg" style="width:100%;max-width:960px"></div>
