Texto conflicto remoto index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
  <p>Este es el primer fichero de mi Git Repo.</p>
  <p>Nueva línea para trabajar con branches!</p>
  <p>Creo Nueva línea para trabajar con branches!</p>
+ <p>CONFLICTO REMOTO</p>
  <div><img src="git-icon.jpeg" style="width:100%;max-width:960px"></div>
 </body>
